--- a/project.config
+++ b/project.config
@@ -1,2 +1,7 @@
 [access "refs/*"]
 	read = group Non-Interactive Users
+[label "Verified"]
+	function = MaxWithBlock
+	value = -1 Fails
+	value =  0 No score
+	value = +1 Verified
