--- a/Makefile.am
+++ b/Makefile.am
@@ -304,6 +304,7 @@ test_expression_vector_SOURCES  = \
 TESTS += test_expression_vector
 
 # contrib/storage
+# TODO(wzoltak): split into core and utilities
 test_contrib_storage_core_CPPFLAGS = $(SUPERSONIC_TESTS_FLAGS)
 test_contrib_storage_core_LDFLAGS  = $(SUPERSONIC_TESTS_LD_FLAGS)
 test_contrib_storage_core_LDADD    = $(SUPERSONIC_TESTS_LD_ADD)
@@ -311,9 +312,15 @@ test_contrib_storage_core_SOURCES  = \
     supersonic/contrib/storage/base/page.cc \
     supersonic/contrib/storage/core/page_builder_test.cc \
     supersonic/contrib/storage/core/file_storage_test.cc \
+    supersonic/contrib/storage/core/storage_sink_test.cc \
+    supersonic/contrib/storage/util/schema_converter_test.cc \
     supersonic/contrib/storage/core/page_builder.cc \
-    supersonic/contrib/storage/util/path_util.cc
+    supersonic/contrib/storage/core/storage_sink.cc \
+    supersonic/contrib/storage/core/page_sink.cc \
+    supersonic/contrib/storage/util/path_util.cc \
+    supersonic/contrib/storage/util/schema_converter.cc
 TESTS += test_contrib_storage_core
+
 
 # Benchmark utilities
 lib_LTLIBRARIES += libsupersonic_benchmark.la
