Dirty multiple files storage.
Change-Id: If545bee17d1f91577a2072f0ee0bcb1e979e797b

--- a/Makefile.am
+++ b/Makefile.am
@@ -323,6 +323,8 @@ test_contrib_storage_core_SOURCES  = \
     supersonic/contrib/storage/core/page_reader_test.cc \
     supersonic/contrib/storage/core/integration_test.cc \
     supersonic/contrib/storage/core/data_type_deserializer.cc \
+    supersonic/contrib/storage/core/slicing_page_stream_writer.cc \
+    supersonic/contrib/storage/core/merging_page_stream_reader.cc \
     supersonic/contrib/storage/core/page_reader.cc \
     supersonic/contrib/storage/core/storage_scan.cc \
     supersonic/contrib/storage/core/page_builder.cc \
