Increased buffer in PageBuilder + get rid of debug flag.
Change-Id: I929bcbe374d0029accf109fa080fa02f85850330

--- a/Makefile.am
+++ b/Makefile.am
@@ -27,7 +27,7 @@ COMPILER_FLAGS = $(PTHREAD_CFLAGS) \
     $(GFLAGS_CFLAGS) \
     $(GLOG_CFLAGS) \
     $(PROTO_CFLAGS) \
-    $(BOOST_CPPFLAGS) -g
+    $(BOOST_CPPFLAGS)
 
 SUPERSONIC_LIB_LD_FLAGS =
 SUPERSONIC_LIB_LD_ADD = \
